# dgim

./: Cargo.toml
src/: cli.rs  config.rs  database.rs  main.rs
