[package]
name = "dgim"
description = "A Workout and Strength Tracking CLI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
dateparser = "0.2.1"
dirs = "5.0.1"
serde = { version = "1.0.199", features = ["derive"] }
sqlite = "0.36.0"
toml = "0.8.12"
